--- a/src/app/gifs/pages/search/search.html
+++ b/src/app/gifs/pages/search/search.html
@@ -1,5 +1,5 @@
-<div class="flex-1 scroll-auto relative">
-    <div class="sticky top-0 flex items-center w-full h-12 rounded-lg focus-within:shadow-lg bg-white overflow-hidden border border-gray-300">
+<div class="flex-1 scroll-auto relative max-[639px]:pt-8">
+    <div class="sticky top-0  flex items-center w-full h-12 rounded-lg focus-within:shadow-lg bg-white overflow-hidden border border-gray-300" [ngClass]="{ 'max-[639px]:z-50': !menuUIService.isMenuOpen() }">
         <div class="grid place-items-center h-full w-12 text-gray-300">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
